--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -61,6 +61,9 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org/
 
+      - name: Install root dependencies
+        run: npm install
+        
       - name: Install library dependencies
         run: npm install
         working-directory: ./interactive-script-js
