--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -20,6 +20,7 @@
     "immer": "^10.1.1",
     "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
