--- a/interactive-script-js/package.json
+++ b/interactive-script-js/package.json
@@ -1,6 +1,6 @@
 {
     "name": "interactive-script-js",
-    "version": "1.0.3",
+    "version": "1.0.3-dev",
     "description": "A library for creating interactive UI elements in JavaScript/TypeScript scripts inside VS Code.",
     "main": "dist/interactive-script-js/index.js",
     "types": "dist/interactive-script-js/index.d.ts",
