--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -13,10 +13,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@floating-ui/react": "^0.27.8",
+    "@types/d3": "^7.4.3",
     "@types/tinycolor2": "^1.4.6",
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
     "csv-stringify": "^6.5.2",
+    "d3": "^7.9.0",
     "immer": "^10.1.1",
     "moment": "^2.30.1",
     "react": "^19.0.0",
