--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
             "view/title": [
                 {
                     "command": "interactiveScript.runScript",
-                    "when": "view == interactiveScript.bottomPanel && (resourceExtname == .ts || resourceExtname == .js || resourceExtname == .py) && !interactiveScript.scriptRunning",
+                    "when": "view == interactiveScript.bottomPanel && (resourceExtname == .ts || resourceExtname == .js || resourceExtname == .py || resourceExtname == .ps1) && !interactiveScript.scriptRunning",
                     "group": "navigation@1"
                 },
                 {
@@ -113,7 +113,7 @@
                 },
                 {
                     "command": "interactiveScript.runScriptSeparate",
-                    "when": "view == interactiveScript.bottomPanel && (resourceExtname == .ts || resourceExtname == .js || resourceExtname == .py)",
+                    "when": "view == interactiveScript.bottomPanel && (resourceExtname == .ts || resourceExtname == .js || resourceExtname == .py || resourceExtname == .ps1)",
                     "group": "navigation@3"
                 },
                 {
@@ -185,6 +185,14 @@
                     },
                     "default": [],
                     "markdownDescription": "Additional command-line arguments to pass to the `python` executable. E.g., `[\"-u\", \"-OO\"]`"
+                },
+                "interactiveScript.powershellArgs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "default": ["-ExecutionPolicy", "Bypass"],
+                    "markdownDescription": "Additional command-line arguments to pass to the `powershell` executable. E.g., `[\"-NoLogo\", \"-ExecutionPolicy\", \"Bypass\"]`"
                 }
             }
         }
