--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Provides interactive UI elements for the JS and TS scripts.",
     "publisher": "andriy-viyatyk",
     "author": "Andriy Viyatyk",
-    "version": "1.0.7-dev",
+    "version": "1.0.8",
     "repository": {
         "type": "git",
         "url": "https://github.com/andriy-viyatyk/interactive-script.git"
@@ -216,10 +216,11 @@
         "script",
         "runner",
         "ui",
-        "components",
+        "gui",
         "typescript",
         "javascript",
         "python",
+        "powershell",
         "json",
         "csv",
         "grid",
