--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -26,6 +26,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-tooltip": "^5.28.1",
     "tinycolor2": "^1.6.0",
     "use-sync-external-store": "^1.5.0",
