--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
                         "filenamePattern": "*.grid.csv"
                     },
                     {
-                        "filenamePattern": "interactive-script-grid:*"
+                        "scheme": "untitled",
+                        "filenamePattern": "*.grid.json"
                     }
                 ],
                 "priority": "default"
@@ -227,7 +228,8 @@
     "devDependencies": {
         "@types/node": "^18.0.0",
         "@types/vscode": "^1.70.0",
-        "typescript": "^5.0.0"
+        "typescript": "^5.0.0",
+        "vsce": "^2.15.0"
     },
     "keywords": [
         "interactive",
