--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Provides interactive UI elements for the JS, TS, PY and PS1 scripts.",
     "publisher": "andriy-viyatyk",
     "author": "Andriy Viyatyk",
-    "version": "1.0.9",
+    "version": "1.0.10-dev",
     "repository": {
         "type": "git",
         "url": "https://github.com/andriy-viyatyk/interactive-script.git"
@@ -247,7 +247,7 @@
         "json",
         "csv",
         "grid",
-        "preview"
+        "editor"
     ],
     "license": "ISC",
     "dependencies": {
